# Snake

./: CMakeLists.txt  main.cpp
include/: food.h  snake.h
src/: food.cpp  main.cpp  snake.cpp
